project.ipynb con API de Spotify

--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -3,108 +3,104 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Práctica de API request",
+   "source": "## Importo librerias y cargo credenciales",
    "id": "b0eb257da1b6c6bc"
   },
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-07T02:13:41.647871Z",
-     "start_time": "2025-09-07T02:13:41.634141Z"
+     "end_time": "2025-09-16T22:14:17.976398Z",
+     "start_time": "2025-09-16T22:14:17.918098Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv"
-   ],
-   "outputs": [],
-   "execution_count": 11
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-07T02:13:51.276823Z",
-     "start_time": "2025-09-07T02:13:51.267956Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "load_dotenv()\n",
-    "client_id = os.getenv(\"CLIENT_ID\")\n",
-    "client_secret = os.getenv('CLIENT_SECRET')\n",
-    "saludo = os.getenv('HOLA')\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "print(saludo)"
+    "load_dotenv()\n",
+    "\n",
+    "client_id = os.getenv(\"CLIENT_ID\")\n",
+    "client_secret = os.getenv(\"CLIENT_SECRET\")\n",
+    "\n",
+    "print(client_id, client_secret)"
    ],
-   "id": "9dbdff5e6cd941d1",
+   "id": "38b1e55bea4ac8a1",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hola\n"
+      "9e1da35f17e64119a319d874b5257319 e731fa74604d4fdc8d81233ba65296d4\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Conexión a la API de Spotify con Spotipy",
+   "id": "bbda766ce8f0c75"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T03:21:04.709379Z",
-     "start_time": "2025-09-07T03:21:04.699730Z"
+     "end_time": "2025-09-16T22:14:18.758502Z",
+     "start_time": "2025-09-16T22:14:18.006888Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "data = [\n",
-    "    (0,'Nos Siguen Pegando Abajo',67,206720),\n",
-    "(1,'Demoliendo Hoteles',66,135973),\n",
-    "(2,'No Voy en Tren',63,181600),\n",
-    "(3,'Promesas Sobre El Bidet',64,164360),\n",
-    "(4,'Hablando a Tu Corazón',63,255266),\n",
-    "(5,'No Me Dejan Salir',62,263200),\n",
-    "(6,'Raros Peinados Nuevos',60,214760),\n",
-    "(7,'Tu Amor',60,186466),\n",
-    "(8,'Rezo por Vos',59,269053),\n",
-    "(9,'Los Dinosaurios',57,208093)\n",
-    "]\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
-    "songs = []\n",
-    "for song in data:\n",
-    "    song_dict = {'canción': song[1], 'popularidad': song[2], 'duración': song[3]}\n",
-    "    songs.append(song_dict)\n",
-    "\n",
-    "songs"
+    "auth_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
+    "spotify = spotipy.Spotify(auth_manager=auth_manager)"
    ],
-   "id": "ef587075f068df4e",
+   "id": "10c558e7b687d15a",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Recupera el Top 10 del artista",
+   "id": "d669f1adac957dd6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T22:14:20.384145Z",
+     "start_time": "2025-09-16T22:14:18.765765Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "artist_id =\"6olE6TJLqED3rqDCT0FyPh\"\n",
+    "top_tracks = spotify.artist_top_tracks(artist_id, country='US')['tracks']\n",
+    "\n",
+    "top_10 = []\n",
+    "for track in top_tracks[:10]:\n",
+    "    top_10.append({\n",
+    "        'song': track['name'],\n",
+    "        'popularity': track['popularity'],\n",
+    "        'duration': track['duration_ms'] // 1000\n",
+    "    })\n",
+    "\n",
+    "print(top_10)"
+   ],
+   "id": "7700c2ae027c2bfa",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'canción': 'Nos Siguen Pegando Abajo',\n",
-       "  'popularidad': 67,\n",
-       "  'duración': 206720},\n",
-       " {'canción': 'Demoliendo Hoteles', 'popularidad': 66, 'duración': 135973},\n",
-       " {'canción': 'No Voy en Tren', 'popularidad': 63, 'duración': 181600},\n",
-       " {'canción': 'Promesas Sobre El Bidet', 'popularidad': 64, 'duración': 164360},\n",
-       " {'canción': 'Hablando a Tu Corazón', 'popularidad': 63, 'duración': 255266},\n",
-       " {'canción': 'No Me Dejan Salir', 'popularidad': 62, 'duración': 263200},\n",
-       " {'canción': 'Raros Peinados Nuevos', 'popularidad': 60, 'duración': 214760},\n",
-       " {'canción': 'Tu Amor', 'popularidad': 60, 'duración': 186466},\n",
-       " {'canción': 'Rezo por Vos', 'popularidad': 59, 'duración': 269053},\n",
-       " {'canción': 'Los Dinosaurios', 'popularidad': 57, 'duración': 208093}]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'song': 'Smells Like Teen Spirit', 'popularity': 84, 'duration': 301}, {'song': 'Come As You Are', 'popularity': 82, 'duration': 218}, {'song': 'Heart-Shaped Box', 'popularity': 81, 'duration': 281}, {'song': 'Lithium', 'popularity': 73, 'duration': 257}, {'song': 'About A Girl', 'popularity': 76, 'duration': 168}, {'song': 'The Man Who Sold The World - Live', 'popularity': 77, 'duration': 261}, {'song': 'Something In The Way', 'popularity': 72, 'duration': 232}, {'song': 'In Bloom', 'popularity': 69, 'duration': 255}, {'song': 'All Apologies', 'popularity': 74, 'duration': 233}, {'song': 'Dumb', 'popularity': 73, 'duration': 151}]\n"
+     ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 6
   }
  ],
  "metadata": {
